# width_counters

./: Cargo.toml  Makefile.toml  README.md
.github/workflows/: ci.yml
src/: iterators.rs  lib.rs
src/counter/: behavior.rs  mod.rs
